holos/deploy/clusters/k3d-holos/components/istio-gateway/namespace-istio-gateways.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: istio-gateways
  name: istio-gateways
