holos/deploy/clusters/k3d-holos/components/istio-gateway/gateway-default.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
  namespace: istio-gateways
spec:
  gatewayClassName: istio
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.holos.localhost'
    name: http
    port: 80
    protocol: HTTP
